Fix interface io modes